# takehome-lablivre-analysis

./: .gitignore  DATABASE.md  README.md  analyse_duplicates.py  create_schema.sql  descricao.md  geocode_ceps.py  get_data.py  load_data.py  projeto_investimento.db  projetos_DF_obrasgov.db  pyproject.toml  relatorio_lablivre.ipynb  schema.mmd  takehome.ipynb
apendices/: duplicate_records_report.txt
data/: cep_coords_ipedf.json  cep_coords_viacep.json  data-0.json  data-1.json  data-2.json  data-3.json  data-4.json  data-5.json  data-6.json  data-7.json  data-8.json  data_raw.csv  data_raw.parquet  df_id_texto.parquet  projetos_com_vetores.parquet
results/: qualidade_detalhes.txt
